--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -1,4 +1,5 @@
 html {
-    font-family: Roboto, Arial, Helvetica, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     font-weight: 400;
+    color: var(--text-color);
 }
